--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "php": ">=5.3.3"
     },
     "autoload": {
-        "psr-0": {
-            "Razr": "src/"
+        "psr-4": {
+            "Razr\\": "src"
         }
     },
     "minimum-stability": "dev",
